I committed all mt filestill date

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5034
-URI=mongodb://127.0.0.1:27017/Chat_app
+URI=mongodb+srv://Paul_Oluwaseyi:pauloluwaseyi@cluster0.rbcjj.mongodb.net/Chat_app?retryWrites=true&w=majority
 KEY=gjhbkusetr9876543#%^&*()*&#$WB$%^&^WrjdhsergYI<MNBRWRE^*&^%$#HTJYLKJH$^&*L</.lku56&*^%U$Y#ERU<YLOI%$HRY*P_)6o[-po98ytUIOI)(:8p7o6564kl;)]o)*(&^&%^$U)
 GOOGLE_CLIENT_ID=627203997143-6uv7n3vcuuqnmrois05u1q119ir5cs5c.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
